--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -243,6 +243,16 @@
   .navbar-brand { max-width: 65%; }
 }
 
+/* Team section uniform image height */
+.team-item img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
+@media (max-width: 576px) {
+    .team-item img { height: 160px; }
+}
+
 .certificate-logo {
     width: 100px;
     height: 100px;
